--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -55,10 +55,10 @@
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mr-1">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Search"><i data-feather="search"></i></a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Search"><i class="icon" data-feather="search"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Bookmarked"><i data-feather="bookmark"></i></a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Bookmarked"><i class="icon" data-feather="bookmark"></i></a>
                         </li>
                     </ul>
                     <form class="form-inline ml-3">
