--- a/Librum/Views/_ViewImports.cshtml
+++ b/Librum/Views/_ViewImports.cshtml
@@ -11,3 +11,4 @@
 @addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
 @addTagHelper *, Westwind.AspNetCore.Markdown
 @inject Users Users
+@inject Articles Articles
