Adding Jquery Unobstrusive Ajax

--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -99,6 +99,7 @@
         <script src="~/lib/feather-icons/dist/feather.js"></script>
         <script src="~/lib/node-snackbar/dist/snackbar.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js"></script>
         <script src="~/js/default.js"></script>
     </environment>
     <environment exclude="Development">
@@ -106,6 +107,7 @@
         <script src="~/lib/feather-icons/dist/feather.min.js"></script>
         <script src="~/lib/node-snackbar/dist/snackbar.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.min.js"></script>
         <script src="~/js/default.min.js" asp-append-version="true"></script>
     </environment>
     @RenderSection("Scripts", required: false)
