Create saved articles page

--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Search"><i class="icon" data-feather="search"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Bookmarked"><i class="icon" data-feather="bookmark"></i></a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="SavedArticles"><i class="icon" data-feather="bookmark"></i></a>
                         </li>
                     </ul>
                     <form class="form-inline ml-3">
