--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
             Copyright &copy; @(DateTime.Now.Year) <span title="@(Configuration.GetValue<string>("Description"))">@(Configuration.GetValue<string>("BlogName"))</span> - Powered by <a href="https://github.com/clintnetwork/librum" target="_blank">Librum</a>.
         </div>
     </footer>
-    <!-- <partial name="_CookieConsentPartial" /> -->
+    <partial name="_CookieConsentPartial" />
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/feather-icons/dist/feather.js"></script>
