--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -14,22 +14,21 @@
     <meta name="DC.Copyright" content="">
     <meta name="DC.Author" content="Clint Mourlevat">
     <link rel="canonical" href="@(Configuration.GetValue<string>("CanonicalUri"))" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css" />
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/lib/nprogress/nprogress.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
-        <link rel="stylesheet" type="text/css" href="~/lib/node-snackbar/dist/snackbar.css" />
-        <link rel="stylesheet" href="~/css/default.css" />
-        <link rel="stylesheet" href="~/css/markdown.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/nprogress/nprogress.css">
+    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
+    <link rel="stylesheet" type="text/css" href="~/lib/node-snackbar/dist/snackbar.css" />
+    <link rel="stylesheet" href="~/css/default.css" />
+    <link rel="stylesheet" href="~/css/markdown.css" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="~/lib/nprogress/nprogress.min.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="~/lib/node-snackbar/dist/snackbar.min.css" />
-        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
-        <link rel="stylesheet" href="~/css/default.min.css" />
-        <link rel="stylesheet" href="~/css/markdown.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/nprogress/nprogress.min.css">
+    <link rel="stylesheet" type="text/css" href="~/lib/node-snackbar/dist/snackbar.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.min.css" />
+    <link rel="stylesheet" href="~/css/default.min.css" />
+    <link rel="stylesheet" href="~/css/markdown.min.css" />
     </environment>
     @RenderSection("Links", required: false)
 </head>
@@ -95,20 +94,20 @@
     </footer>
     <partial name="_CookieConsentPartial" />
     <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/feather-icons/dist/feather.js"></script>
-        <script src="~/lib/node-snackbar/dist/snackbar.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-        <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js"></script>
-        <script src="~/js/default.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/feather-icons/dist/feather.js"></script>
+    <script src="~/lib/node-snackbar/dist/snackbar.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js"></script>
+    <script src="~/js/default.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/feather-icons/dist/feather.min.js"></script>
-        <script src="~/lib/node-snackbar/dist/snackbar.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-        <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.min.js"></script>
-        <script src="~/js/default.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/feather-icons/dist/feather.min.js"></script>
+    <script src="~/lib/node-snackbar/dist/snackbar.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/js/default.min.js" asp-append-version="true"></script>
     </environment>
     @RenderSection("Scripts", required: false)
 </body>
