--- a/Librum/Views/Article/Article.cshtml
+++ b/Librum/Views/Article/Article.cshtml
@@ -19,7 +19,7 @@
                     <h2 class="mb-3">
                         @if (!isLiked)
                         {
-                            <a class="inherit" asp-controller="Article" asp-action="Like" asp-route-slugArticle="@Model.Slug" data-ajax="true" data-ajax-success="Liked"><i class="far fa-heart"></i></a>
+                            <a class="inherit" data-toggle="tooltip" data-placement="top" title="Like this article" asp-controller="Article" asp-action="Like" asp-route-slugArticle="@Model.Slug" data-ajax="true" data-ajax-success="Liked"><i class="far fa-heart"></i></a>
                         }
                         else
                         {
@@ -29,7 +29,7 @@
                     <h6>
                         @if (!isBookmarked)
                         {
-                            <a class="inherit" asp-controller="Article" asp-action="Bookmark" asp-route-slugArticle="@Model.Slug" data-ajax="true" data-ajax-success="Bookmarked"><i class="far fa-bookmark mt-3"></i></a>
+                            <a class="inherit" data-toggle="tooltip" data-placement="bottom" title="Read this article later." asp-controller="Article" asp-action="Bookmark" asp-route-slugArticle="@Model.Slug" data-ajax="true" data-ajax-success="Bookmarked"><i class="far fa-bookmark mt-3"></i></a>
                         }
                         else
                         {
