Repair missing favicon

--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <link rel="canonical" href="@(Configuration.GetValue<string>("CanonicalUri"))" />
     <link rel="apple-touch-icon" sizes="192x192" href="@(Context.Request.Scheme + "://" + Context.Request.Host + "/og.png")">
     <link rel="icon" type="image/png" sizes="192x192" href="@(Context.Request.Scheme + "://" + Context.Request.Host + "/og.png")">
+	<link rel="icon" href="~/favicon.ico" />
     <environment include="Development">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/lib/nprogress/nprogress.css">
