--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -9,24 +9,24 @@
     <meta name="Author" content="@(Configuration.GetValue<string>("Author"))">
     <meta name="Reply-To" content="@(Configuration.GetValue<string>("Contact"))">
     <meta name="Revisit-After" content="1 day">
-    <meta name="image" content="@(Context.Request.Scheme + "://" + Context.Request.Host + "/og.png")">
+    <meta name="image" content="@(Context.Request.IsHttps ? "https":"http" + "://" + Context.Request.Host + "/og.png")">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@(Configuration.GetValue<string>("Twitter"))">
     <meta name="twitter:title" content="@(Configuration.GetValue<string>("BlogName")) | @ViewData["Title"]">
     <meta name="twitter:description" content="@(@ViewData["Description"] ?? Configuration.GetValue<string>("Description"))">
     <meta itemprop="name" content="@(Configuration.GetValue<string>("BlogName")) | @ViewData["Title"]">
     <meta itemprop="description" content="@(@ViewData["Description"] ?? Configuration.GetValue<string>("Description"))">
-    <meta itemprop="image" content="@(Context.Request.Scheme + "://" + Context.Request.Host + "/og.png")">
+    <meta itemprop="image" content="@(Context.Request.IsHttps ? "https":"http" + "://" + Context.Request.Host + "/og.png")">
     <meta name="og:title" content="@(Configuration.GetValue<string>("BlogName")) | @ViewData["Title"]">
     <meta name="og:description" content="@(@ViewData["Description"] ?? Configuration.GetValue<string>("Description"))">
-    <meta name="og:image" content="@(Context.Request.Scheme + "://" + Context.Request.Host + "/og.png")">
+    <meta name="og:image" content="@(Context.Request.IsHttps ? "https":"http" + "://" + Context.Request.Host + "/og.png")">
     <meta name="og:url" content="@(Configuration.GetValue<string>("CanonicalUri"))">
     <meta name="og:site_name" content="@(Configuration.GetValue<string>("BlogName"))">
     <meta name="og:type" content="website">
     <meta name="Identifier-Url" content="@(Configuration.GetValue<string>("CanonicalUri"))">
     <link rel="canonical" href="@(Configuration.GetValue<string>("CanonicalUri"))" />
-    <link rel="apple-touch-icon" sizes="192x192" href="@(Context.Request.Scheme + "://" + Context.Request.Host + "/og.png")">
-    <link rel="icon" type="image/png" sizes="192x192" href="@(Context.Request.Scheme + "://" + Context.Request.Host + "/og.png")">
+    <link rel="apple-touch-icon" sizes="192x192" href="@(Context.Request.IsHttps ? "https":"http" + "://" + Context.Request.Host + "/og.png")">
+    <link rel="icon" type="image/png" sizes="192x192" href="@(Context.Request.IsHttps ? "https":"http" + "://" + Context.Request.Host + "/og.png")">
     <link rel="icon" href="~/favicon.ico" />
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
