--- a/Librum/Views/Home/SavedArticles.cshtml
+++ b/Librum/Views/Home/SavedArticles.cshtml
@@ -1,9 +1,15 @@
 ﻿@model List<Article>
-<div class="text-center py-5 mt-2">
-    <h1 class="display-5 mt-3">Saved Articles</h1>
-    <p>This is the result for your search.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="text-center py-3 py-lg-5 mt-2">
+                <h1 class="display-5 mt-3">Saved Articles</h1>
+                <p>This is the result for your search.</p>
+            </div>
+        </div>
+    </div>
 </div>
-@if(Model.Count == 0)
+@if (Model.Count == 0)
 {
     <p class="text-center">There are no saved articles.</p>
 }
