--- a/Librum/Views/Home/Search.cshtml
+++ b/Librum/Views/Home/Search.cshtml
@@ -1,7 +1,13 @@
 ﻿@model List<Article>
-<div class="text-center py-5 mt-2">
-    <h1 class="display-5 mt-3">Search for '@ViewBag.Terms'</h1>
-    <p>This is the result for your search.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="text-center py-3 py-lg-5 mt-2">
+                <h1 class="display-5 mt-3">Search for '@ViewBag.Terms'</h1>
+                <p>This is the result for your search.</p>
+            </div>
+        </div>
+    </div>
 </div>
 @if (Model.Count == 0)
 {
