--- a/Librum/Views/Shared/_Layout.cshtml
+++ b/Librum/Views/Shared/_Layout.cshtml
@@ -9,24 +9,24 @@
     <meta name="Author" content="@(Configuration.GetValue<string>("Author"))">
     <meta name="Reply-To" content="@(Configuration.GetValue<string>("Contact"))">
     <meta name="Revisit-After" content="1 day">
-    <meta name="image" content="@("https" + Context.Request.Host + "/og.png")">
+    <meta name="image" content="@("https://" + Context.Request.Host + "/og.png")">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@(Configuration.GetValue<string>("Twitter"))">
     <meta name="twitter:title" content="@(Configuration.GetValue<string>("BlogName")) | @ViewData["Title"]">
     <meta name="twitter:description" content="@(@ViewData["Description"] ?? Configuration.GetValue<string>("Description"))">
     <meta itemprop="name" content="@(Configuration.GetValue<string>("BlogName")) | @ViewData["Title"]">
     <meta itemprop="description" content="@(@ViewData["Description"] ?? Configuration.GetValue<string>("Description"))">
-    <meta itemprop="image" content="@("https" + Context.Request.Host + "/og.png")">
+    <meta itemprop="image" content="@("https://" + Context.Request.Host + "/og.png")">
     <meta name="og:title" content="@(Configuration.GetValue<string>("BlogName")) | @ViewData["Title"]">
     <meta name="og:description" content="@(@ViewData["Description"] ?? Configuration.GetValue<string>("Description"))">
-    <meta name="og:image" content="@("https" + Context.Request.Host + "/og.png")">
+    <meta name="og:image" content="@("https://" + Context.Request.Host + "/og.png")">
     <meta name="og:url" content="@(Configuration.GetValue<string>("CanonicalUri"))">
     <meta name="og:site_name" content="@(Configuration.GetValue<string>("BlogName"))">
     <meta name="og:type" content="website">
     <meta name="Identifier-Url" content="@(Configuration.GetValue<string>("CanonicalUri"))">
     <link rel="canonical" href="@(Configuration.GetValue<string>("CanonicalUri"))" />
-    <link rel="apple-touch-icon" sizes="192x192" href="@("https" + Context.Request.Host + "/og.png")">
-    <link rel="icon" type="image/png" sizes="192x192" href="@("https" + Context.Request.Host + "/og.png")">
+    <link rel="apple-touch-icon" sizes="192x192" href="@("https://" + Context.Request.Host + "/og.png")">
+    <link rel="icon" type="image/png" sizes="192x192" href="@("https://" + Context.Request.Host + "/og.png")">
     <link rel="icon" href="~/favicon.ico" />
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -66,14 +66,11 @@
                             }
                         }
                     </ul>
-
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item" id="search-input">
-                            <form method="get" asp-controller="Home" asp-action="Search">
+                        <li class="nav-item mr-1 p-lg-0 px-3">
+                            <form method="get" id="search-input" asp-controller="Home" asp-action="Search">
                                 <input class="form-control form-control-sm mt-1" autofocus name="terms" type="search" placeholder="Search an article...">
                             </form>
-                        </li>
-                        <li class="nav-item mr-1 pl-lg-0 pl-3">
                             <a class="nav-link text-dark" href="#" id="open-search"><i class="icon" data-feather="search"></i><span class="d-lg-none d-inline"> Search</span></a>
                         </li>
                         <li class="nav-item pl-lg-0 pl-3">
