--- a/Librum/wwwroot/css/default.css
+++ b/Librum/wwwroot/css/default.css
@@ -91,6 +91,11 @@ main {
         padding-left: 1rem !important;
     }
 
+    .like-sidebar
+    {
+        display: none !important;
+    }
+
     .navbar-toggler {
     }
 }
