--- a/Librum/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Librum/Views/Shared/_CookieConsentPartial.cshtml
@@ -6,12 +6,12 @@
 }
 @if (showBanner)
 {
-    <div id="cookieConsent" class="alert bg-white shadow alert-dismissible position-fixed border-0 rounded-0 w-100 fixed-bottom mb-0 fade show" role="alert">
+    <div id="cookieConsent" class="alert bg-white shadow position-fixed border-0 rounded-0 w-100 fixed-bottom mb-0 fade show" role="alert">
         <div class="container">
-            <button type="button" class="accept-policy btn btn-sm btn-outline-primary font-weight-normal float-right" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
+            <button type="button" class="accept-policy ml-lg-0 ml-2 btn btn-sm btn-outline-primary font-weight-normal float-right" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
                 I Accept
             </button>
-            <div class="pt-1">🍪 Do you likes Cookies ? @(Configuration.GetValue<string>("BlogName")) need your consent to enable some features and improve your user experience.</div>
+            <div class="pt-1 text-ellipsis" data-toggle="tooltip" data-placement="top" title="🍪 Do you likes Cookies ? @(Configuration.GetValue<string>("BlogName")) need your consent to enable some features and improve your user experience.">🍪 Do you likes Cookies ? @(Configuration.GetValue<string>("BlogName")) need your consent to enable some features and improve your user experience.</div>
         </div>
     </div>
     <script>
